nouvelle mise à jour du dossier médical, champ methode:enlever
